[gd_scene load_steps=3 format=3 uid="uid://dvoquqfw11q81"]

[ext_resource type="Theme" uid="uid://b3kq74llqlv3x" path="res://assets/resources/ui_theme/MinimalUI.tres" id="1_frtyf"]
[ext_resource type="Script" path="res://scripts/ui/options.gd" id="1_l7nvu"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_frtyf")
script = ExtResource("1_l7nvu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
layout_mode = 2
current_tab = 0

[node name="Audio" type="TabBar" parent="MarginContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="MasterVolume" type="VBoxContainer" parent="MarginContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Audio/VBoxContainer/MasterVolume"]
layout_mode = 2
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="MarginContainer/TabContainer/Audio/VBoxContainer/MasterVolume"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolume" type="VBoxContainer" parent="MarginContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Audio/VBoxContainer/MusicVolume"]
layout_mode = 2
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="MarginContainer/TabContainer/Audio/VBoxContainer/MusicVolume"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="EffectsVolume" type="VBoxContainer" parent="MarginContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Audio/VBoxContainer/EffectsVolume"]
layout_mode = 2
text = "Effects Volume"

[node name="HSlider" type="HSlider" parent="MarginContainer/TabContainer/Audio/VBoxContainer/EffectsVolume"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="Video" type="TabBar" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="DisplayMode" type="VBoxContainer" parent="MarginContainer/TabContainer/Video/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Video/VBoxContainer/DisplayMode"]
layout_mode = 2
text = "Display Mode"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/TabContainer/Video/VBoxContainer/DisplayMode"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Windowed"
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="VSync" type="CheckButton" parent="MarginContainer/TabContainer/Video/VBoxContainer"]
layout_mode = 2
text = "VSync"

[node name="Quality" type="VBoxContainer" parent="MarginContainer/TabContainer/Video/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Video/VBoxContainer/Quality"]
layout_mode = 2
text = "Quality Preset"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/TabContainer/Video/VBoxContainer/Quality"]
layout_mode = 2
selected = 1
item_count = 3
popup/item_0/text = "Low"
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2

[node name="Gameplay" type="TabBar" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Gameplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="MouseSensitivity" type="VBoxContainer" parent="MarginContainer/TabContainer/Gameplay/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Gameplay/VBoxContainer/MouseSensitivity"]
layout_mode = 2
text = "Mouse Sensitivity"

[node name="HSlider" type="HSlider" parent="MarginContainer/TabContainer/Gameplay/VBoxContainer/MouseSensitivity"]
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="BackButton" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Back"

[connection signal="value_changed" from="MarginContainer/TabContainer/Audio/VBoxContainer/MasterVolume/HSlider" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/Audio/VBoxContainer/MusicVolume/HSlider" to="." method="_on_music_volume_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/Audio/VBoxContainer/EffectsVolume/HSlider" to="." method="_on_effects_volume_changed"]
[connection signal="item_selected" from="MarginContainer/TabContainer/Video/VBoxContainer/DisplayMode/OptionButton" to="." method="_on_display_mode_changed"]
[connection signal="toggled" from="MarginContainer/TabContainer/Video/VBoxContainer/VSync" to="." method="_on_vsync_toggled"]
[connection signal="item_selected" from="MarginContainer/TabContainer/Video/VBoxContainer/Quality/OptionButton" to="." method="_on_quality_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/Gameplay/VBoxContainer/MouseSensitivity/HSlider" to="." method="_on_mouse_sensitivity_changed"]
[connection signal="pressed" from="MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
